--- a/ACE.Mods.Metrics/ACE.Mods.Metrics.csproj
+++ b/ACE.Mods.Metrics/ACE.Mods.Metrics.csproj
@@ -11,6 +11,17 @@
         <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
         <PlatformTarget>x64</PlatformTarget>
         <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
+    </PropertyGroup>
+
+    <PropertyGroup>
+        <Authors>ACEmulator Contributors</Authors>
+        <RepositoryType>git</RepositoryType>
+        <RepositoryUrl>https://github.com/ACEmulator/ACE.Mods.Metrics</RepositoryUrl>
+        <PackageProjectUrl>https://emulator.ac</PackageProjectUrl>
+        <Copyright>© 2017-2025 ACEmulator Team and Contributors</Copyright>
+        <PackageLicenseFile>LICENSE</PackageLicenseFile>
+        <Description>ACEmulator Prometheus metrics exporter</Description>
+        <Company>ACEmulator</Company>
         <Version>1.0.0</Version>
     </PropertyGroup>
 
