--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,16 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+# ACEmulator Mod specific files
+Settings.json
+
+/Config
+/Content
+/Dats
+/Logs
+/Mods
+
+/grafana-data
+/mysql-data
+/prometheus-data
